Resize Handle and Improvements

--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -8,18 +8,12 @@
             </div>
         </div>
         <p>
-            BrainRoad Labs builds modern, reliable, scalable web & mobile applications.<br />
-            We <strong>blend</strong> AI, blockchain, classic and proven tech stacks into seamless, high-performance systems.
-            <br /><br />
-            Our code runs for brands like Jean Paul Gaultier, was featured in the <a href="https://www.ces.tech/articles/2023/february/ces-2023-spotlights-tech-for-good/" target="_blank">CES 2023 “Tech for Good” Spotlight</a>, and drives tools that have run for 10+ years without downtime.
-            <br /><br />
-            BrainRoad Labs is where <strong>experimentation</strong> meets <strong>engineering</strong>.
+            BrainRoad Labs builds modern, reliable, secure and scalable applications.<br />
+            Our code runs for brands like Jean Paul Gaultier, <a href="https://www.ces.tech/articles/2023/february/ces-2023-spotlights-tech-for-good/#:~:text=Regarding%20Web3%2C%20the,special%20skills%20required." target="_blank">was featured in the CES 2023 “Tech for Good” Spotlight</a>, and drives tools that have run for 10+ years without downtime.<br /><br />
+            We blend cutting-edge and proven tech stacks into high-performance systems.<br />
+            BrainRoad Labs is where experimentation meets engineering — and where tech is just the tool.<br />
+            <strong>Impact is the mission and we give it everything we've got to make it real.</strong><br /><br />
+            <span class="text-gray-400">A brand by <a class="text-gray-400!" href="https://www.linkedin.com/in/tomyspagnolettiduval/" target="_blank">Tomy Spagnoletti Duval</a>. From complexity to clarity.</span>
         </p>
     </div>
 </div>
-
-<!--
-
-    TODO: Splashscreen with logo (in progress)
-
--->
