--- a/src/components/Unlck-u.astro
+++ b/src/components/Unlck-u.astro
@@ -1,4 +1,4 @@
-<div class="br_container" data-nav-id="nav-explanation" style="--order: 10;">
+<div class="br_container" data-nav-id="nav-credits" style="--order: 9;">
     <div class="overflow-auto h-full p-5">
         <div class="br_js_header-container flex flex-wrap items-center mb-2">
             <h1 class="br_js_title text-xl">UNLCK•U</h1>
