--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -68,9 +68,9 @@ import Modal from '../components/Modal.astro';
 							<span class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 whitespace-nowrap rounded bg-gray-900 px-2 py-1 text-xs text-white opacity-0 transition-all duration-200 ease-in-out group-hover:opacity-100 group-hover:visible">Contact</span>
 						</a>
 						<div class="mx-2 border-t w-8 menu-divider"></div>
-						<a href="#" id="nav-explanation" class="group relative">
+						<a href="#" id="nav-credits" class="group relative">
 							<Icon name="heroicons:information-circle" class="h-5 w-5" />
-							<span class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 whitespace-nowrap rounded bg-gray-900 px-2 py-1 text-xs text-white opacity-0 transition-all duration-200 ease-in-out group-hover:opacity-100 group-hover:visible">Explanation</span>
+							<span class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 whitespace-nowrap rounded bg-gray-900 px-2 py-1 text-xs text-white opacity-0 transition-all duration-200 ease-in-out group-hover:opacity-100 group-hover:visible">Credits</span>
 						</a>
 					</div>
 				</nav>
