--- a/src/components/Unlck-u.astro
+++ b/src/components/Unlck-u.astro
@@ -13,7 +13,7 @@
             UNLCK•U is a soon-to-launch coaching practice designed to help individuals unlock their full potential — both personally and professionally.<br />
             Currently under development, the studio will offer structured, strategic, and personalized coaching sessions (excluding sports) focused on clarity, progress, and real-life impact.
             <br /><br />
-            Stay tuned — UNLCK•U will open soon.
+            Stay tuned, UNLCK•U will open soon!
         </p>
     </div>
 </div>
