--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -1,3 +1,8 @@
+---
+import { Image } from 'astro:assets';
+import avatar from '../assets/images/avatar-akihabara.jpg';
+---
+
 <div class="br_container" data-nav-id="nav-home" style="--order: 1;">
     <div class="overflow-auto h-full p-5">
         <div class="br_js_header-container flex flex-wrap items-center mb-2">
@@ -8,12 +13,16 @@
             </div>
         </div>
         <p>
-            BrainRoad Labs builds modern, reliable, secure and scalable applications.<br />
-            Our code runs for brands like Jean Paul Gaultier, <a href="https://www.ces.tech/articles/2023/february/ces-2023-spotlights-tech-for-good/#:~:text=Regarding%20Web3%2C%20the,special%20skills%20required." target="_blank">was featured in the CES 2023 “Tech for Good” Spotlight</a>, and drives tools that have run for 10+ years without downtime.<br /><br />
-            We blend cutting-edge and proven tech stacks into high-performance systems.<br />
-            BrainRoad Labs is where experimentation meets engineering — and where tech is just the tool.<br />
-            <strong>Impact is the mission and we give it everything we've got to make it real.</strong><br /><br />
-            <span class="text-gray-400">A brand by <a class="text-gray-400!" href="https://www.linkedin.com/in/tomyspagnolettiduval/" target="_blank">Tomy Spagnoletti Duval</a>. From complexity to clarity.</span>
+            Hey! I'm Tomy Spagnoletti Duval, CTO and full-stack engineer with <strong>20+ years building products</strong>. I've led engineering for brands like Jean Paul Gaultier, AXA, Allianz, and many more... I built tools still running smoothly after 10+ years, and had work featured at CES 2023 in the <a href="https://www.ces.tech/articles/2023/february/ces-2023-spotlights-tech-for-good/#:~:text=Regarding%20Web3%2C%20the,special%20skills%20required." target="_blank">"Tech for Good" spotlight</a>.
+            <br /><br />
+            I'm also the founder of BrainRoad Labs — where I mix experimentation and solid engineering.
+            <br />
+            One of my latest projects is <strong>Shaaare</strong>, a platform using AI and blockchain to reward creators based on the real quality of their work.
+            <br /><br />
+            📍 I'm moving to <strong>San Francisco</strong> and will be available from <strong>September 2025</strong> for in-person roles, collaborations or CTO-as-a-service, <a href="https://www.linkedin.com/in/tomyspagnolettiduval/" target="_blank">let's talk</a>.
+            <div class="flex justify-center mt-8">
+                <Image class="zoomable-image rounded-full" src={avatar} alt="TSD Picture" style="width: 200px;" loading="lazy" />
+            </div>
         </p>
     </div>
 </div>
