--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -13,7 +13,7 @@ import avatar from '../assets/images/avatar-akihabara.jpg';
             </div>
         </div>
         <p>
-            Hey! I'm Tomy Spagnoletti Duval, CTO and full-stack engineer with <strong>20+ years building products</strong>. I've led engineering for brands like Jean Paul Gaultier, AXA, Allianz, and many more... I built tools still running smoothly after 10+ years, and had work featured at CES 2023 in the <a href="https://www.ces.tech/articles/2023/february/ces-2023-spotlights-tech-for-good/#:~:text=Regarding%20Web3%2C%20the,special%20skills%20required." target="_blank">"Tech for Good" spotlight</a>.
+            Hey! I'm Tomy Spagnoletti Duval, CTO and full-stack engineer with <strong>20+ years building products</strong>. Led engineering on projects for brands like Jean Paul Gaultier, AXA, Allianz, and many more... I built tools still running smoothly after 10+ years, and had work featured at CES 2023 in the <a href="https://www.ces.tech/articles/2023/february/ces-2023-spotlights-tech-for-good/#:~:text=Regarding%20Web3%2C%20the,special%20skills%20required." target="_blank">"Tech for Good" spotlight</a>.
             <br /><br />
             I'm also the founder of BrainRoad Labs — where I mix experimentation and solid engineering.
             <br />
