--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 /* COMPONENTS */
 import Layout from '../layouts/Layout.astro';
 import Home from '../components/Home.astro';
-import Project from '../components/Project.astro';
+import Experience from '../components/Experience.astro';
 import Contact from '../components/Contact.astro';
 import Credits from '../components/Credits.astro';
 import Unlcku from '../components/Unlck-u.astro';
@@ -13,7 +13,7 @@ import SpeedInsights from "@vercel/speed-insights/astro"
 
 <Layout>
 	<Home />
-	<Project />
+	<Experience />
 	<Contact />
 	<Credits />
 	<Unlcku />
