--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -58,9 +58,9 @@ import Modal from '../components/Modal.astro';
 							<span class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 whitespace-nowrap rounded bg-gray-900 px-2 py-1 text-xs text-white opacity-0 transition-all duration-200 ease-in-out group-hover:opacity-100 group-hover:visible">Home</span>
 						</a>
 						<div class="mx-2 border-t w-8 menu-divider"></div>
-						<a href="#" id="nav-projects" class="group relative">
+						<a href="#" id="nav-xp" class="group relative">
 							<Icon name="heroicons:folder-open" class="h-5 w-5" />
-							<span class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 whitespace-nowrap rounded bg-gray-900 px-2 py-1 text-xs text-white opacity-0 transition-all duration-200 ease-in-out group-hover:opacity-100 group-hover:visible">Projects</span>
+							<span class="absolute bottom-full left-1/2 -translate-x-1/2 mb-2 whitespace-nowrap rounded bg-gray-900 px-2 py-1 text-xs text-white opacity-0 transition-all duration-200 ease-in-out group-hover:opacity-100 group-hover:visible">Experience</span>
 						</a>
 						<div class="mx-2 border-t w-8 menu-divider"></div>
 						<a href="#" id="nav-contact" class="group relative">
