Handle internal links

--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -19,7 +19,7 @@ import avatar from '../assets/images/avatar-akihabara.jpg';
             <br />
             One of my latest projects is <strong>Shaaare</strong>, a platform using AI and blockchain to reward creators based on the real quality of their work.
             <br /><br />
-            📍 I'm moving to <strong>San Francisco</strong> and will be available from <strong>September 2025</strong> for in-person roles, collaborations or CTO-as-a-service, <a href="https://www.linkedin.com/in/tomyspagnolettiduval/" target="_blank">let's talk</a>.
+            📍 I'm moving to <strong>San Francisco</strong> and will be available from <strong>September 2025</strong> for in-person roles, collaborations or CTO-as-a-service, <a href="#" class="link-contact">let's talk</a>.
             <div class="flex justify-center mt-8">
                 <Image class="zoomable-image rounded-full" src={avatar} alt="TSD Picture" style="width: 200px;" loading="lazy" />
             </div>
