Last improvements and fix for this first iteration

--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -8,108 +8,126 @@
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Display-Ultralight.woff2') format('woff2');
   font-weight: 100;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Display';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Display-UltralightItalic.woff2') format('woff2');
   font-weight: 100;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Display';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Display-Thin.woff2') format('woff2');
   font-weight: 200;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Display';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Display-ThinItalic.woff2') format('woff2');
   font-weight: 200;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Display';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Display-Light.woff2') format('woff2');
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Display';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Display-LightItalic.woff2') format('woff2');
   font-weight: 300;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Display';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Display-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Display';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Display-RegularItalic.woff2') format('woff2');
   font-weight: 400;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Display';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Display-Medium.woff2') format('woff2');
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Display';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Display-MediumItalic.woff2') format('woff2');
   font-weight: 500;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Display';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Display-Semibold.woff2') format('woff2');
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Display';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Display-SemiboldItalic.woff2') format('woff2');
   font-weight: 600;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Display';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Display-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Display';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Display-BoldItalic.woff2') format('woff2');
   font-weight: 700;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Display';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Display-Heavy.woff2') format('woff2');
   font-weight: 800;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Display';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Display-HeavyItalic.woff2') format('woff2');
   font-weight: 800;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Display';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Display-Black.woff2') format('woff2');
   font-weight: 900;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Display';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Display-BlackItalic.woff2') format('woff2');
   font-weight: 900;
   font-style: italic;
+  font-display: swap;
 }
 
 /*
@@ -120,108 +138,126 @@
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Text-Ultralight.woff2') format('woff2');
   font-weight: 100;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Text';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Text-UltralightItalic.woff2') format('woff2');
   font-weight: 100;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Text';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Text-Thin.woff2') format('woff2');
   font-weight: 200;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Text';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Text-ThinItalic.woff2') format('woff2');
   font-weight: 200;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Text';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Text-Light.woff2') format('woff2');
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Text';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Text-LightItalic.woff2') format('woff2');
   font-weight: 300;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Text';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Text-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Text';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Text-RegularItalic.woff2') format('woff2');
   font-weight: 400;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Text';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Text-Medium.woff2') format('woff2');
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Text';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Text-MediumItalic.woff2') format('woff2');
   font-weight: 500;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Text';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Text-Semibold.woff2') format('woff2');
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Text';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Text-SemiboldItalic.woff2') format('woff2');
   font-weight: 600;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Text';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Text-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Text';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Text-BoldItalic.woff2') format('woff2');
   font-weight: 700;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Text';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Text-Heavy.woff2') format('woff2');
   font-weight: 800;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Text';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Text-HeavyItalic.woff2') format('woff2');
   font-weight: 800;
   font-style: italic;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Text';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Text-Black.woff2') format('woff2');
   font-weight: 900;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Text';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Text-BlackItalic.woff2') format('woff2');
   font-weight: 900;
   font-style: italic;
+  font-display: swap;
 }
 
 /*
@@ -232,52 +268,61 @@
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Rounded-Ultralight.woff2') format('woff2');
   font-weight: 100;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Rounded';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Rounded-Thin.woff2') format('woff2');
   font-weight: 200;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Rounded';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Rounded-Light.woff2') format('woff2');
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Rounded';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Rounded-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Rounded';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Rounded-Medium.woff2') format('woff2');
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Rounded';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Rounded-Semibold.woff2') format('woff2');
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Rounded';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Rounded-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Rounded';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Rounded-Heavy.woff2') format('woff2');
   font-weight: 800;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'SF Pro Rounded';
   src: url('../assets/fonts/sf-pro/woff2/SF-Pro-Rounded-Black.woff2') format('woff2');
   font-weight: 900;
   font-style: normal;
+  font-display: swap;
 }
