--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -15,13 +15,13 @@ import linkedin_logo from '../assets/images/linkedin-logo.svg';
             </div>
         </div>
         <p>
-            <h1 class="text-3xl text-center mt-8">
+            <h1 class="text-3xl text-center mt-6">
                 <a id="contact-email" href="#">Click to reveal the email!</a>
             </h1>
             <p class="text-center text-gray-400 text-sm mt-4">
                 <Icon name="heroicons:information-circle" class="h-5 w-5 inline align-bottom" /> Phone number coming soon.
             </p>
-            <div class="flex justify-around mt-8">
+            <div class="flex justify-around mt-6">
                 <div>
                     <a href="https://x.com/TomySpagnoletti" target="_blank" class="flex flex-col items-center">
                         <Image src={x_logo} alt="X Logo" style="width: 35px;" loading="lazy" />
@@ -40,13 +40,13 @@ import linkedin_logo from '../assets/images/linkedin-logo.svg';
 </div>
 
 <script>
-	const emailLink = document.getElementById('contact-email') as HTMLAnchorElement;
-	if (emailLink) {
+	const emailLink = document.getElementById('contact-email');
+	if (emailLink && emailLink instanceof HTMLAnchorElement) {
 		emailLink.addEventListener('click', function(event) {
 			event.preventDefault();
 			const email = 'h' + 'e' + 'l' + 'l' + 'o' + '@' + 'b' + 'r' + 'a' + 'i' + 'n' + 'r' + 'o' + 'a' + 'd' + '.' + 'x' + 'y' + 'z';
-			this.href = 'mailto:' + email;
-			this.textContent = email;
+			emailLink.href = 'mailto:' + email;
+			emailLink.textContent = email;
 		}, { once: true }); // The listener will only run once.
 	}
 </script>
