--- a/src/components/LottieSplash.astro
+++ b/src/components/LottieSplash.astro
@@ -1,28 +1,7 @@
-<canvas id="splash-lottie-canvas" style="width: 300px; height: 300px;"></canvas>
-
+<canvas
+    id="splash-lottie-canvas"
+    style="width: 300px; height: 300px;"
+></canvas>
 <script>
-    import { DotLottie } from '@lottiefiles/dotlottie-web';
-
-    const canvas = document.getElementById('splash-lottie-canvas');
-
-    if (canvas) {
-        const dotLottie = new DotLottie({
-            autoplay: true,
-            canvas: canvas as HTMLCanvasElement,
-            src: '/animations/BRSplashAnimDark.lottie',
-        });
-
-        dotLottie.addEventListener('complete', () => {
-            const splash = document.getElementById('br_splash');
-            if (!splash) return;
-
-            setTimeout(() => {
-                splash.classList.add('br_splash--hidden');
-                
-                setTimeout(() => {
-                    splash.remove();
-                }, 600); // CSS transition duration
-            }, 1000);
-        });
-    }
+    import "../scripts/lottieSplash.js";
 </script>
